fix spacing front highlights

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -945,14 +945,6 @@ hr {
 /*-------------------------------------*\
   Front page
 \*-------------------------------------*/
-.front-highlight {
-  margin: 2em 2em 0;
-
-  @media (min-width: 570px) {
-    margin: 2em auto 0;
-  }
-}
-
 .past {
   padding: 1vw 5vw 5vw;
   display: flex;
